<resources>

    <!-- GLOBAL -->
    <string name="app_name">AU-South Book Catalog</string>
    <string name="au_logo_description">au logo</string>
    <string name="action_overflow">Overflow</string>
    <!-- END GLOBAL -->

    <!-- Main Activity -->
    <string name="title_activity_main">Book Catalog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_title_menu">Menu</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_all_books">All Books</string>
    <string name="nav_discover_book">Discover a Book</string>
    <string name="nav_downloaded_pdf_books">Browse Downloaded PDF</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_title_options">Options</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_information">Information</string>

    <string name="fav_no_fav">No Books added to Favorites.
        \nTo add books to favorites, Select a book and tap the favorite icon (star)</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_signout">Sign Out</string>
    <!-- END Main Activity-->

    <!-- Login Activity -->
    <string name="title_activity_login">Book Catalog</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="action_info">Information</string>
    <string name="action_setup_ip">Setup IP</string>
    <!-- END Login Activity -->

    <!-- Registration Activity -->
    <string name="title_activity_registration">Registration</string>
    <string name="reg_info">Please fill up the fields below.</string>
    <string name="reg_basic_info">Basic Information:</string>
    <string name="reg_first_name">First Name:</string>
    <string name="reg_last_name">Last Name:</string>
    <string name="reg_stud_id">Student ID:</string>
    <string name="reg_username">Username:</string>
    <string name="reg_password">Password:</string>
    <string name="reg_confirm_password">Confirm Password:</string>
    <string name="reg_register">Register!</string>
    <string name="reg_err">Please fill up all the fields below.</string>
    <string name="reg_err2">Passwords do not match.</string>
    <string name="reg_err3">Your Student ID is not valid.</string>
    <string name="reg_err4">Username is already taken.</string>
    <!-- END Registration Activity -->

    <!-- Information Activity -->
    <string name="title_activity_info">Information</string>
    <string name="nfo_title_description">PHINMA Araullo University - South Book Catalog</string>
    <string name="nfo_description">\t\tBook catalog application is exclusive for Araullo University.
        You can browse books. You can add the books that you love to your favorites.
        \n\n\tIf you want to check if the book is available at the library, you can browse the
        books by using this application. Start reading books here by reading PDF files!\n\n

        Don\'t know what to read? you can discover a book with the help of this application,
        you\'ll just need to answer few questions and it\'ll help you to discover a book of your taste.
    </string>
    <string name="nfo_behind">Behind This Application</string>
    <string name="nfo_img_desc">Profile</string>
    <string name="nfo_docu">Documentor</string>
    <string name="nfo_prog">Programmer</string>
    <string name="nfo_yolly">Yolly Domingo</string>
    <string name="nfo_aaron">Aaron Velasco</string>
    <string name="nfo_zae">Zaerald Lungos</string>
    <!-- END Information Activity -->

    <!-- SetupIp Activity -->
    <string name="title_activity_setup">Setup IP</string>
    <string name="setup_update_ip">Update IP</string>
    <!-- END SetupIp Activity -->

    <!-- BookInformation Activity -->
    <string name="title_activity_bookinfo">Book Information</string>
    <string name="download_pdf">Download PDF</string>
    <string name="read_pdf">Read PDF</string>
    <string name="cancel_pdf">Cancel PDF Download</string>

    <string name="msg_book_image">Book Cover</string>
    <string name="msg_bookmark_image">Bookmark</string>
    <!-- END BookInformation Activity -->

    <!-- ReadBookFragment -->
    <string name="read_list_of_downloaded_pdf">List of Downloaded PDF</string>
    <string name="read_no_pdf">No Downloaded PDF</string>
    <!-- END ReadBookFragment -->

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <!-- END Settings Activity -->
</resources>
