<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zero.zd.aubookcatalog.InformationActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/au_logo_description"
                android:src="@drawable/au_logo"/>

            <TextView
                android:id="@+id/textViewNfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/imageView"
                android:gravity="center_vertical"
                android:text="@string/nfo_title_description"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/textViewNfoBehind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewNfoDescription"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/nfo_behind"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <ImageView
                android:id="@+id/imgYolly"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/textViewNfoBehind"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/nfo_img_desc"
                android:src="@drawable/nfo_img_yolly"/>

            <TextView
                android:id="@+id/textViewNfoYolly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgYolly"
                android:layout_centerHorizontal="true"
                android:text="@string/nfo_yolly"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/textViewNfoYollyInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewNfoYolly"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:text="@string/nfo_docu"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <ImageView
                android:id="@+id/imgAaron"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/textViewNfoYollyInfo"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/nfo_img_desc"
                android:src="@drawable/nfo_img_aaron"/>

            <TextView
                android:id="@+id/textViewNfoAaron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgAaron"
                android:layout_centerHorizontal="true"
                android:text="@string/nfo_aaron"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/textViewNfoAaronInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewNfoAaron"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:text="@string/nfo_docu"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <ImageView
                android:id="@+id/imgZaerald"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/textViewNfoAaronInfo"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/nfo_img_desc"
                android:src="@drawable/info_profile_dummy"/>

            <TextView
                android:id="@+id/textViewNfoZaerald"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgZaerald"
                android:layout_centerHorizontal="true"
                android:text="@string/nfo_zae"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/textViewNfoZaeraldInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewNfoZaerald"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:text="@string/nfo_prog"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/textViewNfoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="39dp"
                android:text="@string/nfo_description"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </RelativeLayout>
    </ScrollView>

</FrameLayout>
